# insights

./: .gitignore  INFRA.md  Local DB.session.sql  TODO.md  create_player_teamid_lut.py  endpoints.md  logs_import.py  player_teamid_lut.json  players.json  players_flattened.json  players_import.py  players_only_starters.json  procedure.md  rebuild-demo-db.sh  schema.sql  scrape_players_import.py  sketching.md  structure-overhaul-todo.txt
.github/workflows/: deploy-lambda-demo.yml  deploy-lambda-log.yml  deploy-lambda.yml  deploy-lambdas.yml  python-app.yml  rust.yml
generators/: README.md  add_queue.py  create_player_teamid_lut.py  player_teamid_lut.json  players_import.py  players_only_starters.json  requirements.txt  scrape_players_import.py
generators/test/: player_teamid_lut.json  players_only_starters.json
insights-services/: Cargo.toml  dumped_logs.csv  player_teamid_lut.json  players_only_starters.json
insights-services/analyzer/: Cargo.toml  bagel_froyo.dem  bing_bong_sunshine.dem  cov_granary.dem  cov_product.dem:Zone.Identifier  gpg_gully.dem  gpg_gully.dem:Zone.Identifier  gpg_snakewater.dem:Zone.Identifier  parsed.json  process_froyo.dem
insights-services/analyzer/lambda-analyze-demo/: Cargo.toml
insights-services/analyzer/lambda-analyze-demo/src/: cache.rs  main.rs
insights-services/analyzer/src/: analyzer.rs  lib.rs  main.rs
insights-services/bomb-attempt-insert/: Cargo.toml
insights-services/bomb-attempt-insert/src/: main.rs
insights-services/functions/: Cargo.toml
insights-services/functions/src/: cache.rs  main.rs
insights-services/importer/: Cargo.toml  season_8_logs.csv
insights-services/importer/src/: lib.rs  main.rs
insights-services/log-insert/: Cargo.toml
insights-services/log-insert/src/: cache.rs  main.rs
insights-services/match-demo/: Cargo.toml
insights-services/match-demo/src/: main.rs
insights-services/src/: collect.rs  db.rs  demos.rs  lib.rs  log.rs  rgl.rs  steam_id.rs
insights-services/src/analyzer/: analyzer.rs  main.rs  process.rs
insights-services/test-demos/: bagel_froyo.dem:Zone.Identifier  bing_bong_sunshine.dem:Zone.Identifier  cov_granary.dem:Zone.Identifier  cov_product.dem  gpg_snakewater.dem  process_demo.dem:Zone.Identifier
insights-web/: .gitignore  package-lock.json  package.json  tailwind.config.js  vite.config.js
insights-web/prisma/: schema.prisma
insights-web/src/lib/: $types.d.ts
insights-web/src/lib/components/: Header.svelte
insights-web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
insights-web/src/routes/api/bomb/[id]/: +server.ts
insights-web/src/routes/cases/: layout.svelte
insights-web/src/routes/cases/jumps/: +page.server.ts  +page.svelte  graph.ts  types.ts
insights-web/src/routes/jumps/: +page.server.ts  +page.svelte
migrations/: migrate-0001-add-seasons-and-multiple-teams.sql
player_importer/: Cargo.toml  log_cache.txt
player_importer/src/: collect.rs  db.rs  log.rs  main.rs  steam_id.rs  test_log.json
schemas/: insights-dev.sql  insights-prod.sql  jumps_big_query.sql
