[package]
name = "insights-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "insights"
path = "src/lib.rs"

[[bin]]
name = "stats"
path = "src/bin/stats.rs"

[[bin]]
name = "migrate-names"
path = "src/bin/migrate_names.rs"

[[bin]]
name = "teamporter"
path = "src/bin/import_team.rs"

[[bin]]
name = "match-demo"
path = "src/bin/match_demo.rs"

[workspace]

members = [
    "analyzer",
    "importer",
    "analyzer/lambda-analyze-demo",
    "log-insert",
    "match-demo",
]


[dependencies]
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.11.0"
chrono = "0.4.26"
regex = "1.8.4"
cached = "0.44.0"
sqlx = { version = "0.7.1", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
dotenv = "0.15.0"
pico-args = "0.5.0"
nix = "0.26.2"
home = "0.5.5"
tf-demo-parser = { git = "https://github.com/demostf/parser.git" }
log = "0.4.19"
tokio-stream = "0.1.14"
futures = "0.3.28"
steamid-ng = "1.0.0"
