[package]
name = "player_importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.5"
chrono = "0.4.26"
regex = "1.8.4"
cached = "0.44.0"
sqlx = {version = "0.6.3", features = ["runtime-tokio-native-tls"]}
