[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "analyzer"
path = "bin/main.rs"

[[bin]]
name = "bulk-process"
path = "bin/process.rs"


[dependencies]
tf-demo-parser = { git = "https://github.com/demostf/parser.git" }
serde = { version = "1.0", features = ["derive"] }
steamid-ng = "1.0.0"
log = "0.4.20"
insights-services = { path = ".." }
pico-args = "0.5.0"
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1.28.2", features = ["full"] }
sqlx = { version = "0.7.1", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
futures = "0.3.28"
dotenv = "0.15.0"
