[package]
name = "importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insights-services = {path = "../"}
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.11.0"
chrono = "0.4.26"
regex = "1.8.4"
cached = "0.44.0"
sqlx = { version = "0.7.1", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
dotenv = "0.15.0"
pico-args = "0.5.0"
home = "0.5.5"
steamid-ng = "1.0.0"
log = "0.4.20"
async-trait = "0.1.73"
