[package]
name = "log-insert"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.10.0", default-features = false, features = ["sqs"] }
dotenv = "0.15.0"

lambda_runtime = "0.8.1"
sqlx = "0.7.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
insights-services = {path = "../"}
async-trait = "0.1.73"
importer = {path = "../importer"}
serde_json = "1.0.105"
